@@ -1,3 +1,8 @@
+2006-03-10  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix source compatibility breakage for fuse_unmount().  Report
+	from Yura Pakhuchiy
+
 2006-03-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Fix O_ASYNC handling in fuse_dev_release().  From Jeff Dike
